--- a/sass/modules/_experienciaModal.scss
+++ b/sass/modules/_experienciaModal.scss
@@ -20,7 +20,7 @@
     &__box {
         width: 70%;
         height: 60%;
-        background-color: #ecf0f1;
+        // background-color: ;
         border-radius: 2rem;
         // overflow: hidden;
         display: flex;
@@ -38,6 +38,11 @@
         &__col {
             width: 50%;
             height: 100%;
+            position: relative;
+            &:nth-child(2) {
+                background-color: #ecf0f1;
+                border-radius: 0 2rem 2rem 0;
+            }
             @media only screen and (max-width: $bp-medium) {
                 &:first-child {
                     height: 35%;
@@ -47,6 +52,11 @@
                     overflow-y: scroll;
                 }
             }
+            &__blank {
+                width: 100%;
+                height: 100%;
+                background-color: transparent;
+            }
             img {
                 width: 100%;
                 height: 100%;
@@ -54,6 +64,43 @@
                 border-radius: 2rem 0 0 2rem;
                 @media only screen and (max-width: $bp-medium) {
                     border-radius: 2rem 2rem 0 0;
+                }
+            }
+            &__imgbox {
+                display: flex;
+                // position: absolute;
+                // bottom: 0;
+                // left: 50%;
+                // transform: translateX(-50%);
+                // border-radius: 2rem 2rem 0rem 0rem;
+                // overflow: hidden;
+                z-index: 3;
+                justify-content: center;
+                &__item {
+                    width: 10rem;
+                    height: 10rem;
+                    border: 1px solid rgba(black, .3);
+                    cursor: pointer;
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        object-fit: cover;
+                        border-radius:unset
+                    }
+                    &.active {
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        border: none;
+                        width: 100%;
+                        height: 100%;
+                        border: none;
+                        transition: all .5s;
+                        transform-origin: bottom;
+                        img {
+                            border-radius: 2rem 0 0 2rem;
+                        }
+                    }
                 }
             }
             &--title {
