--- a/sass/modules/_experienciaModal.scss
+++ b/sass/modules/_experienciaModal.scss
@@ -30,10 +30,11 @@
             width: 85%;
         }
         @media only screen and (max-width: $bp-large) {
-            height: 70%;
+            height: 52%;
         }
         @media only screen and (max-width: $bp-medium) {
             flex-direction: column;
+            height: 70%;
         }
         &__col {
             width: 50%;
@@ -43,13 +44,16 @@
                 background-color: #ecf0f1;
                 border-radius: 0 2rem 2rem 0;
             }
-            @media only screen and (max-width: $bp-medium) {
-                &:first-child {
-                    height: 35%;
-                }
-                width: 100%;
+            @media only screen and (max-width: $bp-large) {
                 &:nth-child(2) {
                     overflow-y: scroll;
+                }
+            }
+            @media only screen and (max-width: $bp-medium) {
+                height: 50%;
+                width: 100%;
+                &:nth-child(2) {
+                    border-radius: 0 0 2rem 2rem;
                 }
             }
             &__blank {
@@ -74,6 +78,11 @@
                 // transform: translateX(-50%);
                 // border-radius: 2rem 2rem 0rem 0rem;
                 // overflow: hidden;
+                @media only screen and (max-width: $bp-medium) {
+                    margin-top: -9rem;
+                    gap: 1rem;
+                    // background-color: rgba(black, .6);
+                }
                 z-index: 3;
                 justify-content: center;
                 &__item {
@@ -81,11 +90,18 @@
                     height: 10rem;
                     border: 1px solid rgba(black, .3);
                     cursor: pointer;
+                    @media only screen and (max-width: $bp-medium) {
+                        border: 2px solid rgba(black, .6);
+                        border-radius: 50%;
+                        width: 7rem;
+                        height: 7rem;
+                    }
                     img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                        border-radius:unset
+                        border-radius: unset;
+                        @media only screen and (max-width: $bp-medium) {
+                            border-radius: 50%;
+                            // filter: grayscale(100%);
+                        }
                     }
                     &.active {
                         position: absolute;
@@ -97,8 +113,13 @@
                         border: none;
                         transition: all .5s;
                         transform-origin: bottom;
+                        z-index: -1;
                         img {
                             border-radius: 2rem 0 0 2rem;
+                            @media only screen and (max-width: $bp-medium) {
+                                border-radius: 2rem 2rem 0 0;
+                                // border: 1px solid white;
+                            }
                         }
                     }
                 }
