--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -1,5 +1,5 @@
 .header {
-    background: linear-gradient(to bottom, rgba(black, .8) 0%, rgba(black, .4) 100%), url(../img/portada2.jpg);
+    background: linear-gradient(to bottom, rgba(black, .8) 0%, rgba(black, .4) 100%), url(../img/portada2.png);
     background-position: center;
     background-size: cover;
     height: 100vh;
