--- a/public/sass/modules/_contacto.scss
+++ b/public/sass/modules/_contacto.scss
@@ -21,6 +21,11 @@
             @media only screen and (max-width: $bp-medium) {
                 width: 100%;
             }
+            .input__error {
+                color: #c0392b;
+                font-size: 1.6rem;
+                text-align: right;
+            }
             &__group {
                 &:not(:last-child) {
                     margin-bottom: 2.5rem;
