--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-    <meta name="description" content="Empresa dedicada al servicio de alquiler integral de estructuras.">
+    <meta name="description" content="La mejor infraestructura en el Perú para tu proyecto. El más destacado servicio personalizado. Estructura normada y certificada">
     <meta name="keywords" content="alquiler, estructuras, eventos, carpas, tarimas, escenarios, gradas, tribunas, vallas, sanitarios, mobiliario, iluminación, sonido, audiovisuales, eventos deportivos, eventos culturales, eventos corporativos, eventos sociales, eventos masivos, eventos privados, eventos públicos, eventos particulares, eventos gubernamentales, eventos institucionales, eventos empresariales, eventos de entretenimiento, eventos de espectáculos, eventos de conciertos, eventos de ferias, eventos de exposiciones, eventos de congresos, eventos de convenciones, eventos de festivales, eventos de bodas, eventos de quince años, eventos de graduaciones, eventos de aniversarios, eventos de cumpleaños, eventos de bautizos, eventos de comuniones, eventos de confirmaciones, eventos de despedidas, eventos de bienvenidas, eventos de inauguraciones, eventos de lanzamientos, eventos de promociones, eventos de premiaciones, eventos de reconocimientos, eventos de agradecimientos, eventos de celebraciones, eventos de conmemoraciones">
     <title><%- title %></title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
